--- a/htmlsnob_vscode_extension/package.json
+++ b/htmlsnob_vscode_extension/package.json
@@ -2,7 +2,7 @@
   "name": "htmlsnob-vscode-extension",
   "displayName": "HTMLSnob Vscode Extension",
   "publisher": "mollerhoj",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.50.0"
   },
@@ -13,5 +13,10 @@
   "main": "./extension.js",
   "dependencies": {
 		"vscode-languageclient": "^9.0.1"
-	}
+	},
+  "repository": "https://github.com/mollerhoj/htmlsnob",
+  "files": [
+    "extension.js",
+    "bin",
+  ],
 }
