--- a/htmlsnob_vscode_extension/package.json
+++ b/htmlsnob_vscode_extension/package.json
@@ -11,12 +11,13 @@
   ],
   "main": "./extension.js",
   "dependencies": {
-		"vscode-languageclient": "^9.0.1"
-	},
+    "vscode-languageclient": "^9.0.1"
+  },
   "repository": "https://github.com/mollerhoj/htmlsnob",
   "files": [
     "extension.js",
     "bin",
     "LICENCE.md"
-  ]
+  ],
+  "version": "0.0.3"
 }
