--- a/htmlsnob_vscode_extension/package.json
+++ b/htmlsnob_vscode_extension/package.json
@@ -11,6 +11,7 @@
   ],
   "main": "./extension.js",
   "dependencies": {
+    "vscode": "^1.1.34",
     "vscode-languageclient": "^9.0.1"
   },
   "repository": "https://github.com/mollerhoj/htmlsnob",
